modal da agenda

--- a/src/app/studentforms/studentforms.component.html
+++ b/src/app/studentforms/studentforms.component.html
@@ -21,8 +21,10 @@
           <input type="text" id="ra1" class="confform" name="ra1" [(ngModel)]="ra" placeholder="R.A.">
           <br />
           <label for="genero"></label>
-          <input type="text" id="gen1" class="confform" name="gen" [(ngModel)]="geb" placeholder="Gênero">
-          <br />
-          <br />
+          <input type="text" id="gen1" class="confform" name="gen" [(ngModel)]="gen" placeholder="Gênero">
+          <br />      
+        <label for="unidade"></label>
+        <input type="text" id="uni" class="confform" name="uni" [(ngModel)]="uni" placeholder="Unidade de Ensino">
+        <br />    
         </div>
         
