--- a/src/app/agenda/agenda.component.html
+++ b/src/app/agenda/agenda.component.html
@@ -1,21 +1,24 @@
 <app-navbar></app-navbar>
-
-<div class="letras">
-  <h4>
-    <strong>
-      AGENDA DE EVENTOS
-    </strong>
-  </h4>
-  <p>
-    Para se cadastrar num evento, basta clicar no dia para iniciar
-  </p>
-</div>
-
-
-<div class="container mb-4">
-
-  <div id='calendar'></div>
-
+<div class="container" style="margin-top: 100px;">
+  <div class="row">
+    <div class="col-9">
+      <div class="letras">
+        <h4>
+          <strong>
+            AGENDA DE EVENTOS
+          </strong>
+        </h4>
+        <p>
+          Para se cadastrar num evento, basta clicar no dia para iniciar
+        </p>
+        <div id='calendar'></div>
+      </div>
+      <div style="padding: 20, 20;"></div>
+    </div>
+    <div class="col-3">
+      adadadadadad
+    </div>
+  </div>
 </div>
 
 
