--- a/src/app/cadastro/cadastro.component.css
+++ b/src/app/cadastro/cadastro.component.css
@@ -1,8 +1,6 @@
 #logo {
     width: 100%;
     max-width: 200px;   
-    height: auto;
-    color: white;   
  }   
 
 .confform{
@@ -47,9 +45,7 @@
 
  #background{
     background-size: cover;
-    height: auto;
-    width: auto;
-    
+    margin-top: 85px;
  }
 
  #ggcolor {
