--- a/src/app/agenda/agenda1.component.html
+++ b/src/app/agenda/agenda1.component.html
@@ -53,8 +53,8 @@
       </div>
       <div class="col-md-8">
         <div class="card-body"  >
-          <h4 class="card-title">Hackton</h4>
-          <p class="card-text">Hackton, <strong>2 de fevereiro de 2019 às 8h30</strong></p>
+          <h4 class="card-title">Workshop</h4>
+          <p class="card-text">Workshop, <strong>2 de fevereiro de 2019 às 8h30</strong></p>
           <p class="card-text">Fatec Pompeia</p>
           <p class="card-text">Rua Santa Terezinha, 56</p>
         </div>
