--- a/src/app/studentforms/studentforms.component.html
+++ b/src/app/studentforms/studentforms.component.html
@@ -1,30 +1,62 @@
 <app-navbar></app-navbar>
 
-<div id="fundo"  [ngStyle]="{'background-image': 'url(' + fundo + ')'}"></div>
+<div id="fundo" [ngStyle]="{ 'background-image': 'url(' + fundo + ')' }"></div>
 
-       <h3 style="color: black; display: inline" id="frase" >DADOS DE </h3><h3 id="anten" style="color: red; display: inline">PERFIL</h3> 
-        <p>
-            Preencha com seus dados complementares
-        </p>
+<h3 style="color: black; display: inline" id="frase">DADOS DE</h3>
+<h3 id="anten" style="color: red; display: inline"> PERFIL</h3>
+<p>
+  Preencha com seus dados complementares
+</p>
+<h6>
+  <strong>Dados Pessoais</strong>
+</h6>
 
-           <div>
-          <label for="fname"></label>
-          <input type="text" id="fname1" class="confform" name="fname" [(ngModel)]="nome" placeholder="Nome">
-          <br />
-          <label for="sname"></label>
-          <input type="text" id="sname1" class="confform" name="fname" [(ngModel)]="sobrenome" placeholder="Sobrenome">
-          <br />
-          <label for="email"></label>
-          <input type="text" id="email1" class="confform" name="email" [(ngModel)]="email" placeholder="E-mail">
-          <br />
-          <label for="ra"></label>
-          <input type="text" id="ra1" class="confform" name="ra1" [(ngModel)]="ra" placeholder="R.A.">
-          <br />
-          <label for="genero"></label>
-          <input type="text" id="gen1" class="confform" name="gen" [(ngModel)]="gen" placeholder="Gênero">
-          <br />      
-        <label for="unidade"></label>
-        <input type="text" id="uni" class="confform" name="uni" [(ngModel)]="uni" placeholder="Unidade de Ensino">
-        <br />    
-        </div>
-        
+<label for="fname"></label>
+<input type="text" id="fname" name="fname1" placeholder="Nome" />
+<br />
+<label for="sname"></label>
+<input type="text" id="sname" name="fname" placeholder="Sobrenome" />
+<br />
+<br />
+<label for="email"></label>
+<input type="text" id="email" name="email" placeholder="E-mail" />
+
+<label for="genero"></label>
+<select id="gen" name="gen">
+  <option value="options">Masculino</option>
+  <option value="options">Feminino</option>
+  <option value="options">Indefinido</option>
+</select>
+<br />
+<label for="ra"></label>
+<input type="text" id="ra" name="ra1" placeholder="R.A." />
+
+<label for="tel"></label>
+<input type="text" id="tel" name="tel1" placeholder="(11) XXXXX-XXXX" />
+<label for="unidade"></label>
+<select id="uni" name="uni">
+  <option value="options">Unidade 1</option>
+  <option value="options">Unidade 2</option>
+  <option value="options">Unidade 3</option>
+</select>
+
+<h6>
+  <strong>Documentos</strong>
+</h6>
+
+<label for="rg"></label>
+<input type="text" id="rg" name="rg1" placeholder="RG" />
+<br />
+<label for="cpf"></label>
+<input type="text" id="cpf" name="cpf1" placeholder="CPF" />
+
+
+<h6>
+  <strong>Dados Profissionais</strong>
+</h6>
+
+<label for="cargo"></label>
+<input type="text" id="cargo" name="carg" placeholder="Cargo" />
+<br />
+<label for="empresa"></label>
+<input type="text" id="empresa" name="empre" placeholder="Empresa"/>
