--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,4 +1,7 @@
 <app-navbar></app-navbar>
+<script>
+  document.title = "Cadastro";
+</script>
 <div id="background" class="container-fluid" [ngStyle]="{'background-image': 'url(' + graf + ')'}">
   
 <div>
