--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="http://www.saopaulo.sp.gov.br/" target="__blank">
       <img id="brasao" [src]="brasao" alt="CPS Governo do Estado de São Paulo">
     </a>
   </nav>
