--- a/src/app/agenda/agenda.component.html
+++ b/src/app/agenda/agenda.component.html
@@ -19,43 +19,28 @@
   <div class="row">
     <div class="col-md-9" id="calendar"></div>
 
-    <div class="horizontal-container col-md-3" fxLayout="row" fxLayout.lt-sm="column" fxLayoutAlign="stretch"
-      fxFlex="auto">
-      <div class="vertical-container" fxLayout="column" fxLayoutAlign="stretch" fxFlex="50%">
-
-        <div class="vertical-container" fxLayout="column" fxLayoutAlign="stretch" fxFlex="50%">
-
-          <div class="content-container" fxLayout="column" fxLayoutAlign="stretch" fxFlex="auto">
-            <swiper *ngIf="type == 'component' && show" class="swiper-container" fxFlex="auto" [config]="config"
-              [disabled]="disabled" (indexChange)="onIndexChange($event)"
-              (swiperTransitionStart)="onSwiperEvent('transitionStart')"
-              (swiperTransitionEnd)="onSwiperEvent('transitionEnd')">
-              <div *ngFor="let slide of slides" class="swiper-slide">
-                <div fxLayout="column" fxLayoutAlign="center center" fxFlexFill>
-                  {{ slide }}
-                </div>
-              </div>
-            </swiper>
-
-            <div *ngIf="type == 'directive' && show" class="swiper-container" [disabled]="disabled" [swiper]="config"
-              (indexChange)="onIndexChange($event)" (swiperTransitionStart)="onSwiperEvent('transitionStart')"
-              (swiperTransitionEnd)="onSwiperEvent('transitionEnd')">
-              <div class="swiper-wrapper">
-                <div *ngFor="let slide of slides" class="swiper-slide">
-                  <div fxLayout="column" fxLayoutAlign="center center" fxFlexFill>
-                    {{ slide }}
-                  </div>
-                </div>
-              </div>
-
-              <div class="swiper-scrollbar" [hidden]="config.scrollbar === false"></div>
-              <div class="swiper-pagination" [hidden]="config.pagination === false"></div>
-              <div class="swiper-button-prev" [hidden]="config.navigation === false"></div>
-              <div class="swiper-button-next" [hidden]="config.navigation === false"></div>
-            </div>
+    <div class="col-md-3">
+      <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="..." alt="First slide">
+          </div>
+          <div class="carousel-item ">
+            <img class="d-block w-100" src="..." alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..." alt="Third slide">
           </div>
         </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
     </div>
   </div>
-</div>
+</div>  
