Ajustes e correções para gerar build e subir no S3

--- a/src/app/agenda/agenda.component.html
+++ b/src/app/agenda/agenda.component.html
@@ -23,7 +23,7 @@
       fxFlex="50%">
 
       <h4>
-         <a href="/agenda1">Meus Eventos</a> 
+         <a href="/#/agenda1">Meus Eventos</a> 
       </h4>
       
       <!-- Slide -->
