--- a/src/app/agenda/agenda1.component.html
+++ b/src/app/agenda/agenda1.component.html
@@ -3,7 +3,7 @@
 <div id="fundo"  [ngStyle]="{'background-image': 'url(' + fundo + ')'}">
 
 
-<div class="letras">
+<div class="container">
   <h4>
     <strong>
       MEUS EVENTOS
@@ -12,9 +12,8 @@
   <p>
     Consulte os eventos inscritos
   </p>
-</div>
 
-<div class="card mb-3" style="max-width: 600px; max-height: 200px; left: 28%;">
+  <div class="card mb-3" style="max-width: 600px; max-height: 200px; left: 28%;">
     <div class="row no-gutters">
       <div class="col-md-4">
         <img src="{{calendar}}" class="imgc" alt="">
@@ -62,3 +61,6 @@
     </div>
   </div>
 </div>
+
+</div>
+
