--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -31,7 +31,7 @@
                <br />
 
               <p>
-                Primeiro acesso? Cadastre-se <a href="/cadastro">aqui</a> ou continue com:
+                Primeiro acesso? Cadastre-se <a href="/#/cadastro">aqui</a> ou continue com:
               </p>
               <div id="center">
                 <button type="button"  size="lg" class="btn btn-primary" id="fbcolor" ><i class="fab fa-facebook-f left"></i></button>
