--- a/src/app/studentforms/studentforms.component.html
+++ b/src/app/studentforms/studentforms.component.html
@@ -1,62 +1,126 @@
 <app-navbar></app-navbar>
 
-<div id="fundo" [ngStyle]="{ 'background-image': 'url(' + fundo + ')' }"></div>
+<div id="fundo" [ngStyle]="{ 'background-image': 'url(' + fundo + ')' }">
 
-<h3 style="color: black; display: inline" id="frase">DADOS DE</h3>
-<h3 id="anten" style="color: red; display: inline"> PERFIL</h3>
-<p>
-  Preencha com seus dados complementares
-</p>
-<h6>
-  <strong>Dados Pessoais</strong>
-</h6>
+  <div class="container">
 
-<label for="fname"></label>
-<input type="text" id="fname" name="fname1" placeholder="Nome" />
-<br />
-<label for="sname"></label>
-<input type="text" id="sname" name="fname" placeholder="Sobrenome" />
-<br />
-<br />
-<label for="email"></label>
-<input type="text" id="email" name="email" placeholder="E-mail" />
+    <h3 style="color: black; display: inline" id="frase">DADOS DE</h3>
+    <h3 id="anten" style="color: red; display: inline"> PERFIL</h3>
+    <p>
+      Preencha com seus dados complementares
+    </p>
 
-<label for="genero"></label>
-<select id="gen" name="gen">
-  <option value="options">Masculino</option>
-  <option value="options">Feminino</option>
-  <option value="options">Indefinido</option>
-</select>
-<br />
-<label for="ra"></label>
-<input type="text" id="ra" name="ra1" placeholder="R.A." />
+    <h6><strong>Dados Pessoais</strong></h6>
 
-<label for="tel"></label>
-<input type="text" id="tel" name="tel1" placeholder="(11) XXXXX-XXXX" />
-<label for="unidade"></label>
-<select id="uni" name="uni">
-  <option value="options">Unidade 1</option>
-  <option value="options">Unidade 2</option>
-  <option value="options">Unidade 3</option>
-</select>
+    <form>
 
-<h6>
-  <strong>Documentos</strong>
-</h6>
+      <div class="form-row">
+        <div class="col">
+          <label for="fname"></label>
+          <input type="text" id="nome" name="nome1" placeholder="Nome" />
+        </div>
+      </div>
 
-<label for="rg"></label>
-<input type="text" id="rg" name="rg1" placeholder="RG" />
-<br />
-<label for="cpf"></label>
-<input type="text" id="cpf" name="cpf1" placeholder="CPF" />
+      <div class="form-row">
+        <div class="col">
+          <label for="sname"></label>
+          <input type="text" id="sobrenome" name="sobrenome1" placeholder="Sobrenome">
+        </div>
+        <div class="col">
+          <label for="genero"></label>
+          <input type="text" id="genero" name="genero1" placeholder="Gênero">
+        </div>
+      </div>
+
+      <div class="form-row">
+        <div class="col">
+          <label for="email"></label>
+          <input type="text" id="email" name="email1" placeholder="E-mail">
+        </div>
+        <div class="col">
+          <label for="telefone"></label>
+          <input type="text" id="tel" name="tel1" placeholder="(11) XXXXX-XXXX">
+        </div>
+      </div>
+
+      <div class="form-row">
+        <div class="col">
+          <label for="ra"></label>
+          <input type="text" id="ra" name="ra1" placeholder="R.A.">
+        </div>
+        <div class="col">
+          <label for="unidae"></label>
+          <input type="text" id="unidade" name="unidade1" placeholder="Unidade de Ensino">
+        </div>
+      </div>
+
+    </form>
+
+  </div>
+</div>
+
+  <!-- <div class="row">
+  <div class="col-sm-3">
+  <a href=""><img [src]="face" id="face" alt=""/></a>
+</div>
+<div class="col-sm-3">
+  <a href=""><img [src]="yout" id="yout" alt=""/></a>
+</div>
+<div class="col-sm-3">
+  <a href=""><img [src]="twt" id="twt" alt=""/></a>
+</div>
+<div class="col-sm-3">
+  <a href=""><img [src]="link" id="link" alt=""/></a>
+</div>
+ <div class="col-sm-3">
+  <a href=""><img [src]="adfile" id="adfile" alt=""/></a>
+</div>
+</div>  -->
+
+<div class="container">
+<h6><strong>Documentos</strong></h6>
+<form>
+
+    <div class="form-row">
+      <div class="col">
+        <label for="rg"></label>
+        <input type="text" id="rg" name="rg1" placeholder="R.G">
+      </div>
+      <div class="col">
+        <label for="cpf"></label>
+        <input type="text" id="cpf" name="cpf1" placeholder="CPF">
+      </div>
+    </div>
+</form>
+</div>
 
 
-<h6>
-  <strong>Dados Profissionais</strong>
-</h6>
-
-<label for="cargo"></label>
-<input type="text" id="cargo" name="carg" placeholder="Cargo" />
-<br />
-<label for="empresa"></label>
-<input type="text" id="empresa" name="empre" placeholder="Empresa"/>
+<div class="container">
+    <h6><strong>Dados Profissionais</strong></h6>
+    <form>
+    
+    <div class="form-row">
+        <div class="col">
+          <label for="cargo"></label>
+          <input type="text" id="cargo" name="cargo1" placeholder="Cargo">
+        </div>
+        <div class="col">
+          <label for="empresa"></label>
+          <input type="text" id="empresa" name="empresa1" placeholder="Empresa">
+        </div>
+      </div>
+    </form>
+  </div>
+  
+  <div class="col-sm-3">
+      <a href=""><img [src]="face" id="face" alt=""/></a>
+    </div>
+    <div class="col-sm-3">
+        <a href=""><img [src]="yout" id="yout" alt=""/></a>
+      </div>
+      <div class="col-sm-3">
+          <a href=""><img [src]="twt" id="twt" alt=""/></a>
+        </div>
+        <div class="col-sm-3">
+            <a href=""><img [src]="link" id="link" alt=""/></a>
+          </div>
