Implementações no Formulario do Perfil

--- a/src/app/studentforms/studentforms.component.css
+++ b/src/app/studentforms/studentforms.component.css
@@ -56,20 +56,29 @@ select {
 
 #face {
   margin-left: 300%;
-  margin-top: -287%;
+  margin-top: -331%;
 }
 #yout {
   margin-left: 320%;
-  margin-top: -302%;
+  margin-top: -347%;
   width: 14%;
 }
 
 #twt {
   margin-left: 337%;
-  margin-top: -317%;
+  margin-top: -363%;
 }
 
 #link {
   margin-left: 355%;
-  margin-top: -332%;
+  margin-top: -379%;
+  width: 16%;
+}
+
+#button1 {
+  width: 10%;
+  border: 2px solid red;
+  border-radius: 50px 20px;
+  background-color: red;
+  color: white;
 }
