--- a/src/app/studentforms/studentforms.component.html
+++ b/src/app/studentforms/studentforms.component.html
@@ -59,24 +59,6 @@
   </div>
 </div>
 
-  <!-- <div class="row">
-  <div class="col-sm-3">
-  <a href=""><img [src]="face" id="face" alt=""/></a>
-</div>
-<div class="col-sm-3">
-  <a href=""><img [src]="yout" id="yout" alt=""/></a>
-</div>
-<div class="col-sm-3">
-  <a href=""><img [src]="twt" id="twt" alt=""/></a>
-</div>
-<div class="col-sm-3">
-  <a href=""><img [src]="link" id="link" alt=""/></a>
-</div>
- <div class="col-sm-3">
-  <a href=""><img [src]="adfile" id="adfile" alt=""/></a>
-</div>
-</div>  -->
-
 <div class="container">
 <h6><strong>Documentos</strong></h6>
 <form>
@@ -109,8 +91,10 @@
           <input type="text" id="empresa" name="empresa1" placeholder="Empresa">
         </div>
       </div>
+      <input type="submit" value="Salvar" id="button1" />
     </form>
   </div>
+  
   
   <div class="col-sm-3">
       <a href=""><img [src]="face" id="face" alt=""/></a>
@@ -124,3 +108,5 @@
         <div class="col-sm-3">
             <a href=""><img [src]="link" id="link" alt=""/></a>
           </div>
+
+      
