Correção de bugs

--- a/src/app/cadastro/cadastro.component.css
+++ b/src/app/cadastro/cadastro.component.css
@@ -29,11 +29,14 @@
     background-color: red;
   }
   
-  div {
+  .register {
     border-radius: 5px;
     background-color: white;
     padding: 20px;
     
+  }
+  .padding{
+    padding: 20px;
   }
 
   #fbcolor{
