--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light bg-light fixed-top">
-  <img id="logo" class="navbar-brand mb-0" [src]="logo">
+  <a href="/"><img id="logo" class="navbar-brand mb-0" [src]="logo"></a>
   <button class="btn btn-danger my-2 my-sm-0" data-toggle="modal" data-target="#modalLogin">ENTRAR</button>
 </nav>
 
