--- a/src/app/projeto/projeto.component.html
+++ b/src/app/projeto/projeto.component.html
@@ -15,7 +15,7 @@
             </p>
 
             <label for="describe"></label>
-            <input type="text" id="describe" name="describe" placeholder="Descrisão do projeto">
+            <input type="text" id="describe" name="describe" placeholder="Descrição do projeto">
 
             <label for="unidade-one"></label>
             <select id="unidade" name="unidade">
@@ -37,7 +37,7 @@
             </select>
 
             <label for="keywords"></label>
-            <input type="password" id="kwords" name="kwords" placeholder="5 palavras-chave">
+            <input type="text" id="kwords" name="kwords" placeholder="5 palavras-chave">
 
         </div>
 
