--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="navbar">
     <div id="item-1">
-        <a class="navbar-brand" href="#"><img [src]="logo" alt="" id="logo"></a>
+        <a class="navbar-brand" href="/"><img [src]="logo" alt="" id="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
     </div>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="#">Sobre</a>
-        <a class="nav-item nav-link" href="#">Parceiros</a>
-        <a class="nav-item nav-link" href="#">Editais</a>
-        <a class="nav-item nav-link" href="#">Contato</a>
+        <a class="nav-item nav-link" href="/about">Sobre</a>
+        <a class="nav-item nav-link" href="/partners">Parceiros</a>
+        <a class="nav-item nav-link" href="/notice">Editais</a>
+        <a class="nav-item nav-link" href="/contact">Contato</a>
       </div>
     </div>
     <div></div>
