--- a/src/app/agenda/modal1.component.html
+++ b/src/app/agenda/modal1.component.html
@@ -1,27 +1,16 @@
-<div class="modal-header">
-  <h4 class="modal-title">CPS</h4>
-  <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss('Cross click')">
-    <span aria-hidden="true">&times;</span>
-  </button>
-</div>
 <div class="modal-body">
-
-  <div class="card mb-3" style="max-width: 380px; max-height: 200px; left: 8.8%;">
+  <div class="card" style="max-width: 900px; max-height: 400px;">
     <div class="row no-gutters">
-      <div class="col-md-4">
+      <div class="col-md-3">
         <img src="{{calendar}}" class="imgc" alt="">
       </div>
-      <div class="col-md-8">
+      <div class="col-md-1 row">
         <div class="card-body">
-          <h4 class="card-title">Hackton</h4>
-          <p class="card-text">Hackton, <strong>20 de março de 2019 às 14h</strong></p>
-          <p class="card-text">Etec Parque da Juventude</p>
-          <p class="card-text">Av.Cruzeiro do Sul, 88</p>
+          <br>
+          <input type="text" class="card-title" placeholder="Adicionar título do evento">
+          <button class="btn btn-danger">Próximo</button>
         </div>
       </div>
     </div>
   </div>
-</div>
-<div class="modal-footer">
-  <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Sair</button>
 </div>
