--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -10,6 +10,8 @@ h1 {
     padding: 5px 5px 0 0;
 }
 #background{
+    padding: 10px;
+    border: 2px, black;
     margin-left: -1rem;
     background-size: cover;
 }
