--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,5 +1,6 @@
 
 <div>
+<div>
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -14,14 +15,16 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-  <div id="background" class="container-fluid" [ngStyle]="{'background-image': 'url(' + graf + ')'}">
-      <br />
-      
-      <h1 style="color: white; display: inline" id="capt">Captando INOVAÇÃO,</h1>
-      <br />
-      <h1 style="color: white; display: inline" id="propg" >propagando para os</h1><h1 id="anten" style="color: red; display: inline">antenados</h1> 
-      <br />
-      <br />
-       
-  </div> 
+</div>
+</div>
+<div id="background" class="" [ngStyle]="{'background-image': 'url(' + graf + ')'}">
+  <br />
+  
+  <h1 style="color: white; display: inline" id="capt">Captando INOVAÇÃO,</h1>
+  <br />
+  <h1 style="color: white; display: inline" id="propg" >propagando para os</h1><h1 id="anten" style="color: red; display: inline">antenados</h1> 
+  <br />
+  <br />
+   
+</div> 
 </div>
