--- a/src/app/studentforms/studentforms.component.html
+++ b/src/app/studentforms/studentforms.component.html
@@ -1,9 +1,11 @@
 <app-navbar></app-navbar>
 
+
+  
+
 <div id="fundo" [ngStyle]="{ 'background-image': 'url(' + fundo + ')' }">
 
   <div class="container">
-
     <h3 style="color: black; display: inline" id="frase">DADOS DE</h3>
     <h3 id="anten" style="color: red; display: inline"> PERFIL</h3>
     <p>
@@ -12,101 +14,116 @@
 
     <h6><strong>Dados Pessoais</strong></h6>
 
-    <form>
-
-      <div class="form-row">
-        <div class="col">
-          <label for="fname"></label>
-          <input type="text" id="nome" name="nome1" placeholder="Nome" />
-        </div>
+    <div class="form-row">
+      <div class="col">
+        <label for="fname"></label>
+        <input type="text" id="nome" name="nome1" [(ngModel)]="nome" value="{{ aluno.nome }}" required />
       </div>
+    </div>
 
-      <div class="form-row">
-        <div class="col">
-          <label for="sname"></label>
-          <input type="text" id="sobrenome" name="sobrenome1" placeholder="Sobrenome">
-        </div>
-        <div class="col">
-          <label for="genero"></label>
-          <input type="text" id="genero" name="genero1" placeholder="Gênero">
-        </div>
+    <div class="form-row">
+      <div class="col">
+        <label for="sname"></label>
+        <input type="text" id="sobrenome" name="sobrenome1" [(ngModel)]="sobrenome" value="{{ aluno.sobrenome }}" />
       </div>
-
-      <div class="form-row">
-        <div class="col">
-          <label for="email"></label>
-          <input type="text" id="email" name="email1" placeholder="E-mail">
+      <div class="col">
+        <label for="genero"></label>          
+        <div *ngIf="aluno.genero; else semGenero">
+          <input type="text" id="genero" name="genero1" [(ngModel)]="genero" value="{{ aluno.genero }}" />
         </div>
-        <div class="col">
-          <label for="telefone"></label>
-          <input type="text" id="tel" name="tel1" placeholder="(11) XXXXX-XXXX">
-        </div>
+        <ng-template #semGenero>
+          <input type="text" id="genero" name="genero1" [(ngModel)]="genero" placeholder="Gênero" />
+        </ng-template>          
       </div>
+    </div>
 
-      <div class="form-row">
-        <div class="col">
-          <label for="ra"></label>
-          <input type="text" id="ra" name="ra1" placeholder="R.A.">
-        </div>
-        <div class="col">
-          <label for="unidae"></label>
-          <input type="text" id="unidade" name="unidade1" placeholder="Unidade de Ensino">
-        </div>
+    <div class="form-row">
+      <div class="col">
+        <label for="email1"></label>
+        <input type="text" id="email1" name="email1" [(ngModel)]="email" value="{{ aluno.email }}" />
       </div>
+    
+      <div class="col" >
+        <label for="telefone"></label>
+        <div *ngIf="aluno.telefone; else semTel">
+           <input type="text" id="tel" name="tel1" [(ngModel)]="telefone"  value="{{ aluno.telefone }}" />
+        </div>
+        <ng-template #semTel>
+          <input type="text" id="tel" name="tel1" [(ngModel)]="telefone" placeholder="(11) XXXXX-XXXX" />
+        </ng-template>
+      </div>
+    </div>
 
-    </form>
-
-  </div>
-</div>
-
-<div class="container">
-<h6><strong>Documentos</strong></h6>
-<form>
+    <div class="form-row">
+      <div class="col">
+        <label for="ra"></label>
+        <input type="text" id="ra" name="ra1" [(ngModel)]="ra"  value="{{ aluno.ra }}" />
+      </div>
+      <div class="col">
+        <label for="unidae"></label>
+        <input type="text" id="unidade" name="unidade1"  [(ngModel)]="escola" value="{{ aluno.escola }}" disabled />
+      </div>
+    </div>
+    
+    <h6><strong>Documentos</strong></h6>
 
     <div class="form-row">
       <div class="col">
         <label for="rg"></label>
-        <input type="text" id="rg" name="rg1" placeholder="R.G">
+        <div *ngIf="aluno.rg; else semRG">
+          <input type="text"  id="rg" name="rg1" [(ngModel)]="rg"  value="{{ aluno.rg }}" />
+        </div>
+        <ng-template #semRG>
+          <input type="text" id="rg" name="rg1" [(ngModel)]="rg"  placeholder="R.G" />
+        </ng-template>
       </div>
       <div class="col">
         <label for="cpf"></label>
-        <input type="text" id="cpf" name="cpf1" placeholder="CPF">
+        <div *ngIf="aluno.cpf; else semCPF">
+          <input type="text"  id="cpf" name="cpf1" [(ngModel)]="cpf"  value="{{ aluno.cpf }}" />
+        </div>
+        <ng-template #semCPF>
+          <input type="text" id="cpf" name="cpf1" [(ngModel)]="cpf"  placeholder="CPF" />
+        </ng-template>
       </div>
     </div>
-</form>
+
+    <h6><strong>Dados Profissionais</strong></h6>
+
+    <div class="form-row">
+      <div class="col">
+        <label for="cargo"></label>
+        <div *ngIf="aluno.cargo; else semCargo">
+          <input type="text"  id="cargo" name="cargo1" [(ngModel)]="cargo"  value="{{ aluno.cargo }}" />
+        </div>
+        <ng-template #semCargo>
+          <input type="text" id="cargo" name="cargo1" [(ngModel)]="cargo"  placeholder="Cargo" />
+        </ng-template>
+      </div>
+      <div class="col">
+        <label for="empresa"></label>
+        <div *ngIf="aluno.local_trabalho; else semEmpresa">
+          <input type="text"   id="empresa" name="empresa1" [(ngModel)]="local_trabalho" value="{{ aluno.local_trabalho }}" />
+        </div>
+        <ng-template #semEmpresa>
+          <input type="text" id="empresa" name="empresa1" [(ngModel)]="local_trabalho"  placeholder="Empresa" />
+        </ng-template>
+      </div>
+    </div>
+      
+    <input type="submit" value="Salvar" (click)="doPUT()" id="button1" />
+  </div>
 </div>
 
-
-<div class="container">
-    <h6><strong>Dados Profissionais</strong></h6>
-    <form>
-    
-    <div class="form-row">
-        <div class="col">
-          <label for="cargo"></label>
-          <input type="text" id="cargo" name="cargo1" placeholder="Cargo">
-        </div>
-        <div class="col">
-          <label for="empresa"></label>
-          <input type="text" id="empresa" name="empresa1" placeholder="Empresa">
-        </div>
-      </div>
-      <input type="submit" value="Salvar" id="button1" />
-    </form>
+<div class="col-sm-3">
+    <a href=""><img [src]="face" id="face" alt=""/></a>
   </div>
-  
-  
   <div class="col-sm-3">
-      <a href=""><img [src]="face" id="face" alt=""/></a>
-    </div>
-    <div class="col-sm-3">
-        <a href=""><img [src]="yout" id="yout" alt=""/></a>
-      </div>
-      <div class="col-sm-3">
-          <a href=""><img [src]="twt" id="twt" alt=""/></a>
-        </div>
-        <div class="col-sm-3">
-            <a href=""><img [src]="link" id="link" alt=""/></a>
-          </div>
-
-      
+    <a href=""><img [src]="yout" id="yout" alt=""/></a>
+  </div>
+  <div class="col-sm-3">
+    <a href=""><img [src]="twt" id="twt" alt=""/></a>
+  </div>
+  <div class="col-sm-3">
+    <a href=""><img [src]="link" id="link" alt=""/></a>
+  </div>     
