--- a/src/app/data-binding/data-binding.component.html
+++ b/src/app/data-binding/data-binding.component.html
@@ -20,10 +20,10 @@
           <div>
             <form>
               <label for="email">Email</label>
-              <input type="text" id="username" class="camposform" name="username" [(ngModel)]="usrn"    >
+              <input type="text" id="username" class="camposform" name="userName" [(ngModel)]="usr"    >
           
               <label for="password">Senha</label>
-              <input type="password" id="password" class="camposform" name="password"  [(ngModel)]="pswd" >
+              <input type="password" id="password" class="camposform" name="password"  [(ngModel)]="psw" >
                      
               <input type="submit" (click)="doPOST()" onclick="$('#modalLogin').modal('hide')" value="Entrar"><br>
               <a href="">Esqueceu sua senha ?</a>
