--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
 
       <div class="col-md-6 navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link col-md-4 " href="#/inicio">Início</a>
+          <a class="nav-item nav-link col-md-4 " href="#/">Início</a>
           <a class="nav-item nav-link col-md-4 " href="#/agenda">Agenda</a>
           <a class="nav-item nav-link col-md-4 " href="#/notice">Parceiros</a>
           <a class="nav-item nav-link col-md-4 " href="#/contact">Contato</a> 
