Conexao da pagina de Alterar Dados do Aluno  com a API back-end

--- a/src/app/studentforms/studentforms.component.html
+++ b/src/app/studentforms/studentforms.component.html
@@ -57,7 +57,7 @@
     <div class="form-row">
       <div class="col">
         <label for="ra"></label>
-        <input type="text" id="ra" name="ra1" [(ngModel)]="ra"  value="{{ aluno.ra }}" />
+        <input type="text" id="ra" name="ra1" [(ngModel)]="RA"  value="{{ aluno.ra }}" />
       </div>
       <div class="col">
         <label for="unidae"></label>
